Use TLS on API request

--- a/pages/model-list.html
+++ b/pages/model-list.html
@@ -16,7 +16,7 @@
     <iron-ajax
       auto
       method="post"
-      url="http://testing.archilogic.com/api/v2"
+      url="https://testing.archilogic.com/api/v2"
       handle-as="json"
       content-type="application/json"
       body='{"jsonrpc": "2.0", "id": "YOLO", "method": "Model.list", "params": {"arguments": {}}}'
